feat: reset password endpoint exposed internally
